@@ -1,3 +1,8 @@
+Jul 21, 2007 - chris
+o calling ham_set_prefix_compare_func and ham_set_compare_func with NULL
+    as second parameter resets the compare function to the default
+    compare function (based on memcmp)
+
 Jul 19, 2007 - chris
 o bugfix: if a ham_db_t handle was reused after ham_close, an internal
     pointer was not set to NULL, which resulted in a segfault
